--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,15 @@
-- name: HTML5/CSS3
-  percentage: 90
+- name: R
+  percentage: 70
   color: danger
 
-- name: Go
-  percentage: 80
+- name: HTML/CSS
+  percentage: 50
   color:
 
 - name: Python
-  percentage: 70
+  percentage: 30
+  color: secondary
+
+- name: Matlab
+  percentage: 30
   color: secondary
