--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,24 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-- title: Software Engineer, Google, UK
-  from: 2018
+- title: Master Student, Psychology, The Chinese University of Hong Kong
+  from: 2021
   to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  supervisor: Prof. Urs Maurer
+  description: My graduation thesis is about the N1 print tuning effect. Supervised by Urs Maurer.
+
+
+- title: Research Assistant, Chinese and Bilingual Studies, The Polytechnic University of Hong Kong
+  from: 2021.01
+  to: 2021.08
+  supervisor: Prof. Caicai Zhang
+  description: I was responsible for EEG data collection and analysis. I monitored the whole process of experiment
+              and did the pre-processing for further analysis. I was also responsible for running the Matlab script
+              with raw data to get the final analysis results.
+
+- title: Research Assistant, Linguistics, The Chinese University of Hong Kong
+  from: 2020.09
+  to: 2021.01
+  supervisor: Prof. Shuxiang You
+  description: Responsible for conducting literary review and information collection.
+
+- title: Master Student, Linguistics, The Chinese University of Hong Kong
+  from: 2019
+  to: 2020
