--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ author:
   image             : https://i.imgur.com/uyDNQnn.jpg
 # dribbble          : your_username
   email             : ye_xinyi@yahoo.com
-  github            : Alex. X. Ye
-  linkedin          : your_username
+  github            : alexxyye
+  linkedin          : linkedin.com/in/xinyi-ye-69b90119a
 
 
 
