--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -5,7 +5,7 @@
   description: My graduation thesis is about the N1 print tuning effect. Supervised by Urs Maurer.
 
 
-- title: Research Assistant, Chinese and Bilingual Studies, The Polytechnic University of Hong Kong
+- title: Research Assistant, Chinese and Bilingual Studies, The Hong Kong Polytechnic University
   from: 2021.01
   to: 2021.08
   supervisor: Prof. Caicai Zhang
