--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Alex Ye
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : https://lh3.googleusercontent.com/a-/AOh14GhcCzP0rnboHWpXBKx7XMG_Mo9-g-z44dDlgWLvyA=s576-p-rw-no
 # dribbble          : your_username
   email             : ye_xinyi@yahoo.com
   github            : alexxyye
