--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
 # dribbble          : your_username
   email             : ye_xinyi@yahoo.com
   github            : alexxyye
-  linkedin          : linkedin.com/in/xinyi-ye-69b90119a
+  linkedin          : xinyi-ye-69b90119a
 
 
 
