no project shown

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ defaults:
   - scope:
       path: ""
       type: "projects"
-    values:
+    values: false
       layout: "page"
   - scope:                                              # For Documentation Only
       path: ""                                          # For Documentation Only
