--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,10 @@ buymeacoffee:
 
 ### Defaults for collections ###
 defaults:
-  - scope:
-      path: ""
-      type: "projects"
-    values: false
+  #- scope:
+  #    path: ""
+  #    type: "projects"
+  #  values:
       #layout: "page"
   - scope:                                              # For Documentation Only
       path: ""                                          # For Documentation Only
@@ -78,7 +78,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      comments: false                                   # Set to true to enable disqus comments
+      comments: true                                   # Set to true to enable disqus comments
 
 
 ### Exclude from processing ###
