--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -17,7 +17,7 @@
   from: 2020.09
   to: 2021.01
   supervisor: Prof. Shuxiang You
-  description: Responsible for conducting literary review and information collection.
+  description: Responsible for conducting literature review and information collection.
 
 - title: Master Student, Linguistics, The Chinese University of Hong Kong
   from: 2019
