--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -12,7 +12,7 @@
   from: 2022.07
   to: 2022.08
   description: I learned how to build cmputational models of biological structures in our brain 
-              with maching learning and deep learning. Along with methods to analyze fMRI data using 
+              with machining learning and deep learning. Along with methods to analyze fMRI data using 
               Python. For details please see "NMA project" in the project column of my personal website :)
 
 - title: Master Student, Psychology, The Chinese University of Hong Kong
