--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Alex Ye
-  image             : https://lh3.googleusercontent.com/a-/AOh14GhcCzP0rnboHWpXBKx7XMG_Mo9-g-z44dDlgWLvyA=s576-p-rw-no
+  image             : https://blclab.org/wp-content/uploads/2022/10/WechatIMG38-265x300.jpeg
 # dribbble          : your_username
   email             : ye_xinyi@yahoo.com
   github            : alexxyye
@@ -35,7 +35,7 @@ author:
 
 
 ### Posts ###
-permalink: /blog/:title
+permalink: /posts/:title
 
 
 ### Collections ###
@@ -51,17 +51,6 @@ analytics:
   enabled: true                                        # Set true to enable analytics
   google:
     tracking_id: 3478929165
-
-
-### Buy me a coffee ###
-# See https://www.buymeacoffee.com/
-buymeacoffee:
-  enabled: false
-  username: your_username
-  color: "#007bff"
-  message: "Thank you for visiting."                    # Message to be displayed aside from the button for a few seconds.
-  description: ""
-
 
 ### Defaults for collections ###
 defaults:
