--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,18 @@ plugins:
 
 
 ### Navbar Settings ###
-nav_exclude:                                            # The following paths are excluded from navbar
-  - pages/tags.html
-  - pages/404.html
-  - pages/index.md
-  - documentation/partials/**                       # For Documentation Only    
+navbar-links:
+  Home: "/"
+  Posts: "pages/blog.html"
+  Projects: "pages/projects.html"
+  Researchs: "pages/research.md"
+  About: "pages/about.md"
+
+# nav_exclude:                                            # The following paths are excluded from navbar
+#   - pages/tags.html
+#   - pages/404.html
+#   - pages/index.md
+#   - documentation/partials/**                       # For Documentation Only    
 
 
 
