--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ navbar-links:
   Researchs: "pages/research.md"
   About: "pages/about.md"
 
-# nav_exclude:                                            # The following paths are excluded from navbar
-#   - pages/tags.html
+nav_exclude:                                            # The following paths are excluded from navbar
+  - pages/tags.html
 #   - pages/404.html
 #   - pages/index.md
 #   - documentation/partials/**                       # For Documentation Only    
