--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
 
 nav_exclude:                                            # The following paths are excluded from navbar
   - pages/tags.html
-  - _posts/**
+  - posts/**
 #   - pages/404.html
 #   - pages/index.md
 #   - documentation/partials/**                       # For Documentation Only    
