--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,10 @@ navbar-links:
 nav_exclude:                                            # The following paths are excluded from navbar
   - pages/tags.html
   - posts/**
-#   - pages/404.html
-#   - pages/index.md
-#   - documentation/partials/**                       # For Documentation Only    
+  - _posts/**
+  - pages/404.html
+  - pages/index.md
+  - documentation/partials/**                       # For Documentation Only    
 
 
 
@@ -51,8 +52,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:name
-  posts:
-    output: true
   elements:                                             # For Documentation Only
     output: true                                        # For Documentation Only
 
