--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name              : Alex Ye
   image             : https://lh3.googleusercontent.com/a-/AOh14GhcCzP0rnboHWpXBKx7XMG_Mo9-g-z44dDlgWLvyA=s576-p-rw-no
 # dribbble          : your_username
-  email             : ye_xinyi@yahoo.com
+  email             : alexxye.al@gmail.com
   github            : alexxyye
   linkedin          : xinyi-ye-69b90119a
 
