--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - posts-archived/**
-  - documentation/partials/**                       # For Documentation Only    
+  - __posts-archived/**
+  # - documentation/partials/**                       # For Documentation Only    
 
 
 
