--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Alex Ye
-  image             : https://lh3.googleusercontent.com/a-/AOh14GhcCzP0rnboHWpXBKx7XMG_Mo9-g-z44dDlgWLvyA=s576-p-rw-no
+  image             : https://drive.google.com/file/d/1AowfpkKTzEHrIYf_MRrlBgFB2RQxFypt/view?usp=drive_link
 # dribbble          : your_username
   email             : alexxye.al@gmail.com
   github            : alexxyye
