--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Alex Ye
-  image             : https://drive.google.com/file/d/1AowfpkKTzEHrIYf_MRrlBgFB2RQxFypt/view?usp=drive_link
+  image             : https://alexxyye.github.io/docs/profile_pic.jpg
 # dribbble          : your_username
   email             : alexxye.al@gmail.com
   github            : alexxyye
