--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : Alex's Homepage
+title               : Alex Xinyi Ye
 description         : >-
                       I enjoy studying brain and mind.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
